tempfile/derive_more/tests/compile_fail/display/non_display_implicit_enum_unit_variant.rs
#[derive(derive_more::Display, derive_more::UpperHex)]
enum Enum {
    UnitVariant,
}

fn main() {}
